Product Sales Front End

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:sqlserver://DESKTOP-FLLI10L:1433;databaseName=pharma
 spring.datasource.username=minhaz
-spring.datasource.password=`1234567890-=][poi01
+spring.datasource.password=120080
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 spring.jpa.show-sql=true
