Date Base Business Analysis added

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,9 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		  <spring-boot.run.jvmArguments>-Duser.timezone=UTC</spring-boot.run.jvmArguments>
 	</properties>
+
 
 	<dependencies>
 		<dependency>
