--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-
-spring.datasource.url=jdbc:sqlserver://DESKTOP-FLLI10L:1433;databaseName=pharma
-spring.datasource.username=minhaz
-spring.datasource.password=120080
+server.port=8085
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=BanglaNews
+spring.datasource.username=test
+spring.datasource.password=test
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto = update
 
+spring.jpa.database-platform=org.hibernate.dialect.SQLServer2008Dialect
