UI Level Change

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8085
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=BanglaNews
-spring.datasource.username=test
-spring.datasource.password=test
+spring.datasource.url=jdbc:sqlserver://DESKTOP-FLLI10L;databaseName=pharma
+spring.datasource.username=minhaz
+spring.datasource.password=120080
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 spring.jpa.show-sql=true
